creating a "staff" collection controller that can get, post, put and delete from the collection
