# swagger.json
@@ -56,47 +56,6 @@
     "/books/new": {
       "post": {
         "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "bookTitle": {
-                  "example": "any"
-                },
-                "isbn": {
-                  "example": "any"
-                },
-                "mainAuthor": {
-                  "example": "any"
-                },
-                "coAuthors": {
-                  "example":"any"
-                },
-                "publishedDate": {
-                  "example": "any"
-                },
-                "publisher": {
-                  "example": "any"
-                },
-                "genre": {
-                  "example": "any"
-                },
-                "format": {
-                  "example": "any"
-                },
-                "language": {
-                  "example": "any"
-                },
-                "edition": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
           "default": {
             "description": ""
@@ -113,45 +72,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "bookTitle": {
-                  "example": "any"
-                },
-                "ISBN": {
-                  "example": "any"
-                },
-                "mainAuthor": {
-                  "example": "any"
-                },
-                "coAuthors": {
-                  "example": "any"
-                },
-                "publishedDate": {
-                  "example": "any"
-                },
-                "publisher": {
-                  "example": "any"
-                },
-                "genre": {
-                  "example": "any"
-                },
-                "format": {
-                  "example": "any"
-                },
-                "language": {
-                  "example": "any"
-                },
-                "edition": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
@@ -167,6 +87,74 @@
         "parameters": [
           {
             "name": "isbn",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/staff/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/staff/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
